--- a/bali-android/app/src/main/res/layout/activity_main.xml
+++ b/bali-android/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.android.bali.MainActivity">
+    tools:context="com.android.bali.activities.MainActivity">
 
     <FrameLayout
         android:id="@+id/container"
