--- a/bali-android/app/src/main/res/layout/fragment_bali.xml
+++ b/bali-android/app/src/main/res/layout/fragment_bali.xml
@@ -2,10 +2,16 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-<ListView
-    android:id="@+id/bali_list_items"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<!--<ListView-->
+    <!--android:id="@+id/bali_list_items"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent">-->
 
-</ListView>
+<!--</ListView>-->
+    <TextView
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="adsadasdsadsadsa"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </FrameLayout>
