work with XStream

--- a/bali-android/app/src/main/res/layout/fragment_bali.xml
+++ b/bali-android/app/src/main/res/layout/fragment_bali.xml
@@ -8,10 +8,13 @@
     <!--android:layout_height="match_parent">-->
 
 <!--</ListView>-->
-    <TextView
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="adsadasdsadsadsa"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/t_v"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </ScrollView>
+
 </FrameLayout>
