work with XStream

--- a/bali-android/app/src/main/res/layout/fragment_bali.xml
+++ b/bali-android/app/src/main/res/layout/fragment_bali.xml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-<!--<ListView-->
-    <!--android:id="@+id/bali_list_items"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent">-->
 
-<!--</ListView>-->
-    <ScrollView
+    <ListView
+        android:id="@+id/bali_list_items"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <TextView
-            android:id="@+id/t_v"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </ScrollView>
 
+    </ListView>
 </FrameLayout>
