--- a/bali-android/app/src/main/res/layout/activity_posts.xml
+++ b/bali-android/app/src/main/res/layout/activity_posts.xml
@@ -8,7 +8,11 @@
     <ListView
         android:id="@+id/posts_list_items"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:divider="@color/colorAccent"
+        android:dividerHeight="10sp"
+        >
 
     </ListView>
 </RelativeLayout>
