--- a/bali-android/app/src/main/res/layout/post_view.xml
+++ b/bali-android/app/src/main/res/layout/post_view.xml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
     <ImageView
         android:id="@+id/post_image"
-        android:layout_alignParentTop="true"
         android:layout_width="match_parent"
-        android:layout_height="250dp" />
+        android:layout_height="250dp"
+        android:layout_alignParentTop="true"
+        android:scaleType="centerCrop" />
 
     <TextView
-       android:layout_below="@+id/post_image"
         android:id="@+id/post_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/post_image"
+        android:textSize="18sp"
+        android:textColor="@color/colorPrimaryDark"
+        android:textStyle="italic" />
 
     <TextView
-        android:layout_below="@+id/post_title"
         android:id="@+id/post_annotation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/post_title"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
