--- a/bali-android/app/src/main/res/layout/fragment_converter.xml
+++ b/bali-android/app/src/main/res/layout/fragment_converter.xml
@@ -2,7 +2,8 @@
 <android.support.percent.PercentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/palmy">
 
     <android.support.percent.PercentRelativeLayout
         android:layout_gravity="center"
@@ -11,16 +12,29 @@
 
         <LinearLayout
             android:layout_alignParentTop="true"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             app:layout_heightPercent="50%"
             app:layout_widthPercent="100%">
 
-            <EditText
-                android:id="@+id/conv_input"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/conv_input_layout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:layout_weight="2"
-                android:inputType="number" />
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="20dp"
+                android:layout_weight="1">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/conv_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:hint="USD"
+                    android:inputType="number"
+                    android:textColor="@android:color/white" />
+            </android.support.design.widget.TextInputLayout>
 
 
             <ImageView
@@ -31,34 +45,52 @@
                 android:src="@drawable/converter_img" />
 
             <ImageView
+                android:id="@+id/conv_input_image"
                 android:layout_width="0dp"
-                android:layout_height="30dp"
+                android:layout_height="50dp"
                 android:layout_gravity="bottom"
                 android:layout_weight="2"
-                android:src="@drawable/bali_image" />
+                android:src="@drawable/usa" />
 
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/lv"
             android:layout_alignParentBottom="true"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:orientation="horizontal"
             app:layout_heightPercent="50%"
             app:layout_widthPercent="100%">
 
-            <TextView
-                android:id="@+id/conv_output"
-                android:layout_gravity="center"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/conv_output_layout"
                 android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_weight="2" />
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="20dp"
+                android:layout_weight="1"
+                android:clickable="false">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/conv_output"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clickable="false"
+                    android:focusableInTouchMode="false"
+                    android:hint="RUB"
+                    android:inputType="number"
+                    android:textColor="@android:color/white" />
+            </android.support.design.widget.TextInputLayout>
 
             <ImageView
-                android:layout_gravity="center"
-                android:src="@drawable/bali_image"
+                android:id="@+id/conv_output_image"
                 android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_weight="1" />
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:src="@drawable/russian_federation" />
         </LinearLayout>
     </android.support.percent.PercentRelativeLayout>
 
