--- a/bali-android/app/src/main/res/layout/fragment_converter.xml
+++ b/bali-android/app/src/main/res/layout/fragment_converter.xml
@@ -38,6 +38,7 @@
 
 
             <ImageView
+                android:id="@+id/swap"
                 android:layout_width="0dp"
                 android:layout_height="30dp"
                 android:layout_gravity="bottom"
