--- a/bali-android/app/src/main/res/layout/content_scrolling.xml
+++ b/bali-android/app/src/main/res/layout/content_scrolling.xml
@@ -5,13 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.android.bali.activities.ScrollingActivity"
-    tools:showIn="@layout/activity_scrolling">
+    tools:showIn="@layout/fragment_weather">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ListView
+        android:id="@+id/forecast_list"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="@string/large_text" />
+        />
 
 </android.support.v4.widget.NestedScrollView>
