add forecasts view

--- a/bali-android/app/src/main/res/layout/content_scrolling.xml
+++ b/bali-android/app/src/main/res/layout/content_scrolling.xml
@@ -7,10 +7,14 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/fragment_weather">
 
-    <ListView
-        android:id="@+id/forecast_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/forecast_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimaryDark"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            />
 
 </android.support.v4.widget.NestedScrollView>
