--- a/bali-android/app/src/main/res/values/colors.xml
+++ b/bali-android/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#FFFFFF</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#FFFFFF</color>
+
+    <color name="blue">#1E90FF</color>
+
 </resources>
