--- a/bali-android/app/src/main/res/layout/forecast_view.xml
+++ b/bali-android/app/src/main/res/layout/forecast_view.xml
@@ -2,35 +2,44 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:layout_marginBottom="2dp"
+    >
 
     <TextView
         android:id="@+id/forecast_week_day"
         android:layout_width="0dp"
+        android:gravity="center"
         android:layout_height="match_parent"
         android:layout_weight="2"
-        android:textSize="20sp" />
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/forecast_condition"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
-        android:textSize="20sp" />
+        android:lines="1"
+        android:textColor="@color/colorPrimary"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/forecast_high"
         android:layout_width="0dp"
-        android:gravity="center"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:textSize="20sp" />
+
+        android:gravity="center"
+        android:textColor="@color/colorPrimary"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/forecast_low"
         android:layout_width="0dp"
-        android:gravity="center"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:textSize="20sp" />
+        android:gravity="center"
+        android:textColor="@color/blue"
+        android:textSize="14sp" />
 </LinearLayout>
