--- a/bali-android/app/src/main/res/values/colors.xml
+++ b/bali-android/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FFFFFF</color>
 
     <color name="blue">#1E90FF</color>
+    <color name="transparency_black">#80000000</color>
 
 </resources>
