add splash screen

--- a/bali-android/app/src/main/res/values/styles.xml
+++ b/bali-android/app/src/main/res/values/styles.xml
@@ -11,6 +11,10 @@
         <item name="subtitleTextColor">@android:color/black</item>
     </style>
 
+    <style name="SplashTheme" parent="AppTheme.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_content</item>
+    </style>
+
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
