--- a/bali-android/app/src/main/res/layout/fragment_converter.xml
+++ b/bali-android/app/src/main/res/layout/fragment_converter.xml
@@ -8,7 +8,9 @@
     <android.support.percent.PercentRelativeLayout
         android:layout_gravity="center"
         app:layout_heightPercent="40%"
-        app:layout_widthPercent="100%">
+        app:layout_widthPercent="100%"
+        android:background="#80C0C0C0"
+        >
 
         <LinearLayout
             android:layout_alignParentTop="true"
