--- a/bali-android/app/src/main/res/layout/forecast_view.xml
+++ b/bali-android/app/src/main/res/layout/forecast_view.xml
@@ -2,27 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
     android:layout_marginBottom="2dp"
-    >
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/forecast_week_day"
         android:layout_width="0dp"
-        android:gravity="center"
         android:layout_height="match_parent"
         android:layout_weight="2"
+        android:gravity="center"
         android:textColor="@color/colorPrimary"
         android:textSize="18sp" />
 
-    <TextView
+    <ImageView
         android:id="@+id/forecast_condition"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="2"
-        android:lines="1"
-        android:textColor="@color/colorPrimary"
-        android:textSize="16sp" />
+        android:layout_weight="2" />
 
     <TextView
         android:id="@+id/forecast_high"
