--- a/bali-android/app/src/main/res/layout/fragment_converter.xml
+++ b/bali-android/app/src/main/res/layout/fragment_converter.xml
@@ -7,10 +7,9 @@
 
     <android.support.percent.PercentRelativeLayout
         android:layout_gravity="center"
-        app:layout_heightPercent="40%"
-        app:layout_widthPercent="100%"
         android:background="#80C0C0C0"
-        >
+        app:layout_heightPercent="40%"
+        app:layout_widthPercent="100%">
 
         <LinearLayout
             android:layout_alignParentTop="true"
@@ -52,7 +51,7 @@
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_gravity="bottom"
-                android:layout_weight="2"
+                android:layout_weight="1"
                 android:src="@drawable/usa" />
 
         </LinearLayout>
@@ -73,7 +72,7 @@
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginTop="20dp"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:clickable="false">
 
                 <android.support.design.widget.TextInputEditText
