--- a/bali-android/app/src/main/res/layout/categories_view.xml
+++ b/bali-android/app/src/main/res/layout/categories_view.xml
@@ -11,12 +11,12 @@
 
     <TextView
         android:id="@+id/categories_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
+        android:layout_gravity="bottom"
         android:layout_marginBottom="5dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:text="Shopping"
         android:textColor="@color/colorPrimary"
         android:textSize="22dp"
         android:textStyle="italic" />
